pom überarbeitet, für Jar erstellung [MF]