@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>maven</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx</artifactId>
+            <artifactId>javafx-base</artifactId>
             <version>19</version>
             <type>pom</type>
         </dependency>
@@ -54,34 +54,81 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version> <!-- oder die neueste Version -->
+                <version>3.9.0</version>
                 <configuration>
-                    <release>19</release> <!-- oder die Java-Version, die Sie verwenden -->
-                    <source>19</source>
-                    <target>19</target>
+                    <source>
+                        19
+                    </source>
+                    <target>
+                        19
+                    </target>
                 </configuration>
             </plugin>
-
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version> <!-- oder die neueste Version -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
                 <executions>
+                    <!-- Execution for Client -->
                     <execution>
-                        <id>javafx:run</id>
-                        <phase>none</phase>
+                        <id>assembly-client</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                            <finalName>client</finalName>
+                            <archive>
+                                <manifest>
+                                    <mainClass>SEPee.client.model.Client</mainClass>
+                                </manifest>
+                            </archive>
+                        </configuration>
+                    </execution>
+
+                    <!-- Execution for ClientAI -->
+                    <execution>
+                        <id>assembly-clientai</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                            <finalName>clientAI</finalName>
+                            <archive>
+                                <manifest>
+                                    <mainClass>SEPee.client.model.ClientAI</mainClass>
+                                </manifest>
+                            </archive>
+                        </configuration>
+                    </execution>
+
+                    <!-- Execution for Server -->
+                    <execution>
+                        <id>assembly-server</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                            <finalName>server</finalName>
+                            <archive>
+                                <manifest>
+                                    <mainClass>SEPee.server.model.Server</mainClass>
+                                </manifest>
+                            </archive>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <mainClass>src/main/java/SEPee/client/model/ChatClient.java</mainClass>
-                    <options>
-                        <option>--module-path</option>
-                        <option>javafx-sdk-19/lib</option>
-                        <option>--add-modules</option>
-                        <option>javafx.controls,javafx.fxml</option>
-                        <!-- Weitere VM-Optionen hier -->
-                    </options>
-                </configuration>
             </plugin>
         </plugins>
     </build>
